grammar.ebnf
(* TIPOS BÁSICOS *)
Digit = "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9" ;
NonZero = "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9" ;

Integer = ["-"], ("0" | NonZero, {Digit} ) ;

Float = Integer , "." , Digit, {Digit} ;

Boolean = "true" | "false" ;

letter = "A" | "B" | "C" | "D" | "E" | "F" | "G"
       | "H" | "I" | "J" | "K" | "L" | "M" | "N"
       | "O" | "P" | "Q" | "R" | "S" | "T" | "U"
       | "V" | "W" | "X" | "Y" | "Z"
       | "a" | "b" | "c" | "d" | "e" | "f" | "g"
       | "h" | "i" | "j" | "k" | "l" | "m" | "n"
       | "o" | "p" | "q" | "r" | "s" | "t" | "u"
       | "v" | "w" | "x" | "y" | "z" ;

char = letter | Digit | " " | "_" | "-" ;

String = '"' { char } '"' ;

Literal = String | Integer | Float | Boolean ; 

List = "[", [ Expression, { ",", Expression } ], "]" ;

(* IDENTIFICADORES E TIPOS *)
Identifier = letter, { letter | Digit | "_" } ;

Type = "Int" | "Float" | "String" | "Bool" | "[", Type , "]" ;

(* 3. EXPRESSÕES E OPERADORES (Precedência)   *)
(*<||>*)
(*<&&>*)
(*<==>, <!=>*)
(*<'<'>, <'>'>, <'>='>, <'<='>*)
(*<+>, <->*)
(*<*>, </>, <%>*)

Expression = OrExpr ;

OrExpr = AndExpr, { "||", AndExpr } ;
AndExpr = EqualExpr, { "&&", EqualExpr } ;
EqualExpr = CompExpr, [ ("==" | "!="), CompExpr ] ;
CompExpr = AddExpr, [ (">" | "<" | ">=" | "<="), AddExpr ] ;
AddExpr = MultpExpr, { ("+" | "-"), MultpExpr } ;
MultpExpr = ReturnExpr, { ("*", "/", "%"), ReturnExpr } ;

(* Lida com funções ou átomos da gramática *)
ReturnExpr = CallFunction | Atom ;

(* VER ISSO DPS *)
CallFunction = Identifier, Atom, { Atom } ;
Atom = Literal | List | Identifier | "(", Expression, ")" ;

(* DECLARAÇÕES *)
FuncAnnotation = Identifier, "::", Type, { "->", Type } ;

AssignOperators = "=" | "+=" | "-=" | "*=" | "/=" ;
Assignment = Identifier, AssignOperators, Expression ;

Statement = FuncAnnotation | Assignment | Expression ;

(* PODE SER VAZIO TAMBÉM *)
Program = { Statement } 
       
